--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Hello Tag</title>
 </head>
 <body>
-Hello Hong Kong  
+  <h1>Hello Hong Kong</h1>
+  <p style="background-color:#D358F7;">This is a sample of a paragraph.<br>
+  We can have multiple lines here.<br>
+  One More LInes.<br>
+  </p>
+  <img src="https://www.cuhk.edu.hk/chinese/images/cuhk_logo_2x.png">
+  <a href="https://www.cuhk.edu.hk">Link to CUHk Website</a>
 </body>
 </html>
